Process the announcement total by RIR

--- a/workbooks/announcements_by_rir.ipynb
+++ b/workbooks/announcements_by_rir.ipynb
@@ -25,13 +25,41 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "846439a0-88a3-4f38-b6ef-b7ce4f9193cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Any\n",
+    "\n",
+    "def to_cidrs(res: netaddr.IPRange | netaddr.IPNetwork | Any):\n",
+    "    if isinstance(res, netaddr.IPRange):\n",
+    "        return list([str(x) for x in res.cidrs()])\n",
+    "    elif isinstance(res, netaddr.IPNetwork):\n",
+    "            return [str(res)]\n",
+    "    else:\n",
+    "        return [res]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "bc3aa278-2945-4791-93e9-7d652872b8cb",
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "'IGNORING asns'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "RIS dump contains row(s) with AS_SET! These will never be RPKI valid (https://tools.ietf.org/html/rfc6907#section-7.1.8)\n",
       "RIS dump contains row(s) with AS_SET! These will never be RPKI valid (https://tools.ietf.org/html/rfc6907#section-7.1.8)\n"
      ]
     }
@@ -40,14 +68,22 @@
     "async with aiohttp.ClientSession() as session:\n",
     "    async with session.get('https://ftp.ripe.net/pub/stats/ripencc/nro-stats/latest/nro-delegated-stats') as resp:\n",
     "        df_extended = read_delegated_extended_stats(io.StringIO(await resp.text()))\n",
-    "\n",
-    "    df_riswhois = read_ris_dump('https://www.ris.ripe.net/dumps/riswhoisdump.IPv4.gz')\n",
-    "        "
+    "        display(\"IGNORING asns\")\n",
+    "        df_extended = df_extended.loc[df_extended.afi != 'asn']\n",
+    "    \n",
+    "    df_extended['resource'] = df_extended.resource.map(to_cidrs)\n",
+    "    df_extended = df_extended.explode(\"resource\")\n",
+    "    \n",
+    "    df_riswhois = pd.concat([\n",
+    "        read_ris_dump('https://www.ris.ripe.net/dumps/riswhoisdump.IPv4.gz'),\n",
+    "        read_ris_dump('https://www.ris.ripe.net/dumps/riswhoisdump.IPv6.gz')\n",
+    "    ])\n",
+    "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ac9f4e44-5e2d-47a0-99d4-dfd4d32efe7f",
    "metadata": {},
    "outputs": [
@@ -122,63 +158,76 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1171506</th>\n",
-       "      <td>63199</td>\n",
-       "      <td>223.255.250.0/24</td>\n",
-       "      <td>360.0</td>\n",
-       "      <td>24</td>\n",
+       "      <th>270117</th>\n",
+       "      <td>56655</td>\n",
+       "      <td>fd00:10:130:151::253/128</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1171507</th>\n",
-       "      <td>63199</td>\n",
-       "      <td>223.255.251.0/24</td>\n",
-       "      <td>360.0</td>\n",
-       "      <td>24</td>\n",
+       "      <th>270118</th>\n",
+       "      <td>56655</td>\n",
+       "      <td>fd00:10:130:151::254/128</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1171508</th>\n",
-       "      <td>58519</td>\n",
-       "      <td>223.255.252.0/24</td>\n",
-       "      <td>358.0</td>\n",
-       "      <td>24</td>\n",
+       "      <th>270119</th>\n",
+       "      <td>174</td>\n",
+       "      <td>fd00:550:ffff:ffff:ffff:ffff:ffff:ffff/128</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1171509</th>\n",
-       "      <td>58519</td>\n",
-       "      <td>223.255.253.0/24</td>\n",
-       "      <td>358.0</td>\n",
-       "      <td>24</td>\n",
+       "      <th>270120</th>\n",
+       "      <td>174</td>\n",
+       "      <td>fd00:978:ffff:ffff:ffff:ffff:ffff:ffff/128</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1171510</th>\n",
-       "      <td>55415</td>\n",
-       "      <td>223.255.254.0/24</td>\n",
-       "      <td>373.0</td>\n",
-       "      <td>24</td>\n",
+       "      <th>270121</th>\n",
+       "      <td>56655</td>\n",
+       "      <td>fd00:2001:470:3593::/126</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>126</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1171495 rows × 4 columns</p>\n",
+       "<p>1441595 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         origin            prefix  seen_by_peers  prefix_length\n",
-       "16       216425         0.0.0.0/0            1.0              0\n",
-       "17        50628         0.0.0.0/0            1.0              0\n",
-       "18        34927         0.0.0.0/0            2.0              0\n",
-       "19        35708         0.0.0.0/0            1.0              0\n",
-       "20        56755         0.0.0.0/0            1.0              0\n",
-       "...         ...               ...            ...            ...\n",
-       "1171506   63199  223.255.250.0/24          360.0             24\n",
-       "1171507   63199  223.255.251.0/24          360.0             24\n",
-       "1171508   58519  223.255.252.0/24          358.0             24\n",
-       "1171509   58519  223.255.253.0/24          358.0             24\n",
-       "1171510   55415  223.255.254.0/24          373.0             24\n",
+       "        origin                                      prefix  seen_by_peers  \\\n",
+       "16      216425                                   0.0.0.0/0            1.0   \n",
+       "17       50628                                   0.0.0.0/0            1.0   \n",
+       "18       34927                                   0.0.0.0/0            2.0   \n",
+       "19       35708                                   0.0.0.0/0            1.0   \n",
+       "20       56755                                   0.0.0.0/0            1.0   \n",
+       "...        ...                                         ...            ...   \n",
+       "270117   56655                    fd00:10:130:151::253/128            1.0   \n",
+       "270118   56655                    fd00:10:130:151::254/128            1.0   \n",
+       "270119     174  fd00:550:ffff:ffff:ffff:ffff:ffff:ffff/128            1.0   \n",
+       "270120     174  fd00:978:ffff:ffff:ffff:ffff:ffff:ffff/128            1.0   \n",
+       "270121   56655                    fd00:2001:470:3593::/126            1.0   \n",
        "\n",
-       "[1171495 rows x 4 columns]"
+       "        prefix_length  \n",
+       "16                  0  \n",
+       "17                  0  \n",
+       "18                  0  \n",
+       "19                  0  \n",
+       "20                  0  \n",
+       "...               ...  \n",
+       "270117            128  \n",
+       "270118            128  \n",
+       "270119            128  \n",
+       "270120            128  \n",
+       "270121            126  \n",
+       "\n",
+       "[1441595 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f526c4f3-392d-48ca-bac1-0a7afa7623c9",
    "metadata": {},
    "outputs": [
@@ -201,7 +250,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "907d061f-9872-43d5-9671-0a52d0a6c82d",
    "metadata": {},
    "outputs": [
@@ -323,7 +372,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>205690 rows × 4 columns</p>\n",
+       "<p>207122 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -340,10 +389,10 @@
        "719040      ZZ       2a16:: 2024-12-22 00:00:00+00:00  available\n",
        "719041      ZZ       2a18:: 2024-12-22 00:00:00+00:00  available\n",
        "\n",
-       "[205690 rows x 4 columns]"
+       "[207122 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,17 +403,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "79afe1b3-c745-414e-a575-7cab7ddffc7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(615598, 10)"
+       "(620758, 10)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "11f4ae76-ef07-4e33-957b-1b3848974f91",
    "metadata": {},
    "outputs": [
@@ -486,7 +535,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>95192 rows × 4 columns</p>\n",
+       "<p>96624 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -503,10 +552,10 @@
        "361820      NL   223.27.112.0 2010-08-24 00:00:00+00:00  assigned\n",
        "361821      NL   223.27.114.0 2010-08-24 00:00:00+00:00  assigned\n",
        "\n",
-       "[95192 rows x 4 columns]"
+       "[96624 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "7eb16e62-1b67-411e-8995-4b3b278c46e0",
    "metadata": {},
    "outputs": [],
@@ -525,30 +574,38 @@
     "lookup = RisWhoisLookupMoreLessSpecific(df_riswhois, visibility_threshold=15)\n",
     "\n",
     "def lookup_filter(row) -> Set[ExpandedRisEntry]:\n",
-    "    return lookup[row['raw_resource']]"
+    "    return lookup[row['resource']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e597c95-18c7-4486-8eed-0e5be708087e",
+   "metadata": {},
+   "source": [
+    "Lookup only for RIPE NCC ipv4 space:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2f5206c7-4e34-4a2b-b939-4957cf68b2b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "announcements = df_extended.loc[(df_extended.rir == 'ripencc') & (df_extended.afi == 'ipv4')].apply(lookup_filter, axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "859b895f-9090-4a19-b021-2921655b16c4",
+   "id": "d8781128-2d62-4e42-b08d-41b466f17028",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "2f5206c7-4e34-4a2b-b939-4957cf68b2b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "announcements = df_extended.loc[(df_extended.rir == 'ripencc') & (df_extended.afi == 'ipv4')].sample(1000).apply(lookup_filter, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "34ca56eb-9ed8-4e4f-8927-c9caf91b7863",
    "metadata": {},
    "outputs": [],
@@ -558,49 +615,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "7df2077a-bd55-4799-a286-caa0bd8590f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "975"
+       "96624"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(announced)"
+    "len(announcements)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "0c20896d-1ec4-4ef1-8d91-437e48a2483a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "167115                {(57145, 91.226.250.0/24, 396.0, 24)}\n",
-       "168398                 {(31727, 91.236.26.0/23, 369.0, 23)}\n",
-       "153271                                                   {}\n",
-       "302682                {(12741, 195.225.68.0/24, 395.0, 24)}\n",
-       "353463    {(44539, 212.66.56.0/24, 406.0, 24), (44539, 2...\n",
+       "109354                 {(12975, 1.178.112.0/20, 364.0, 20)}\n",
+       "109355                 {(12975, 1.178.128.0/20, 364.0, 20)}\n",
+       "109359    {(12975, 1.178.208.0/20, 361.0, 20), (12975, 1...\n",
+       "109360    {(12479, 1.178.224.0/20, 361.0, 20), (12479, 1...\n",
+       "109363                  {(12975, 1.179.40.0/21, 363.0, 21)}\n",
        "                                ...                        \n",
-       "244819                 {(32806, 185.38.32.0/22, 362.0, 22)}\n",
-       "119797                 {(44486, 37.44.215.0/24, 369.0, 24)}\n",
-       "155247                  {(31608, 84.205.0.0/19, 398.0, 19)}\n",
-       "164355                 {(3209, 91.208.193.0/24, 365.0, 24)}\n",
-       "129565                 {(60781, 45.154.56.0/24, 386.0, 24)}\n",
-       "Length: 1000, dtype: object"
+       "360912                  {(3320, 217.224.0.0/11, 364.0, 11)}\n",
+       "361391                                                   {}\n",
+       "361794                                                   {}\n",
+       "361820                                                   {}\n",
+       "361821                {(54103, 223.27.114.0/24, 355.0, 24)}\n",
+       "Length: 96624, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,9 +667,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73755ba3-e25e-43e6-85ab-ac7e4a48e023",
+   "metadata": {},
+   "source": [
+    "## Look up all the announcements\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6ad62d34-088e-49c2-b7aa-e25771242ce9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_extended['announcements'] = df_extended.apply(lookup_filter, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0c8472b7-8ed1-4a89-b5a4-ed79ae3a9aab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "announced = set(itertools.chain.from_iterable(announcements.to_list()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "69412857-8874-44f5-83df-152757ba5659",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "207122"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_extended[df_extended.rir == 'ripencc']['announcements'].to_list())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbfc0c50-895c-44a4-94bf-03bb8cdbbf09",
+   "id": "924ea8ad-9636-473a-a1ae-165af7dac9bc",
    "metadata": {},
    "outputs": [],
    "source": []
