--- a/workbooks/delegated_extended_parquet.ipynb
+++ b/workbooks/delegated_extended_parquet.ipynb
@@ -67,10 +67,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1599ba36-3549-47cf-a58b-ec3dd5d1f0bc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rir</th>\n",
+       "      <th>country</th>\n",
+       "      <th>afi</th>\n",
+       "      <th>raw_resource</th>\n",
+       "      <th>length</th>\n",
+       "      <th>date</th>\n",
+       "      <th>status</th>\n",
+       "      <th>opaque_id</th>\n",
+       "      <th>category</th>\n",
+       "      <th>resource</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>EU</td>\n",
+       "      <td>asn</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1993-09-01 00:00:00+00:00</td>\n",
+       "      <td>assigned</td>\n",
+       "      <td>12cf5dd8-0c74-4405-bcf5-0df45f7dde12</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>DE</td>\n",
+       "      <td>asn</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1993-09-01 00:00:00+00:00</td>\n",
+       "      <td>assigned</td>\n",
+       "      <td>822283a9-e9f2-4155-9408-2b30b469547b</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>asn</td>\n",
+       "      <td>137</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1993-09-01 00:00:00+00:00</td>\n",
+       "      <td>assigned</td>\n",
+       "      <td>79a53d4d-4e5c-4585-b952-2a936cce5e0b</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>asn</td>\n",
+       "      <td>224</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1993-09-01 00:00:00+00:00</td>\n",
+       "      <td>assigned</td>\n",
+       "      <td>f5d1ffe0-7d97-4d48-8ebf-87de56e72b1c</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>EU</td>\n",
+       "      <td>asn</td>\n",
+       "      <td>248</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1993-09-01 00:00:00+00:00</td>\n",
+       "      <td>assigned</td>\n",
+       "      <td>3903dde7-01a4-47b2-9c35-57c1e9de0c9c</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719037</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv6</td>\n",
+       "      <td>2a14:fd00::</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>available</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>2a14:fd00::/24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719038</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv6</td>\n",
+       "      <td>2a14:fe00::</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>available</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>2a14:fe00::/23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719039</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv6</td>\n",
+       "      <td>2a15::</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>available</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>2a15::/16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719040</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv6</td>\n",
+       "      <td>2a16::</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>available</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>2a16::/15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719041</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv6</td>\n",
+       "      <td>2a18::</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>available</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>2a18::/13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>252724 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            rir country   afi raw_resource  length                      date  \\\n",
+       "7       ripencc      EU   asn            7       1 1993-09-01 00:00:00+00:00   \n",
+       "28      ripencc      DE   asn           28       1 1993-09-01 00:00:00+00:00   \n",
+       "137     ripencc      IT   asn          137       1 1993-09-01 00:00:00+00:00   \n",
+       "224     ripencc      NO   asn          224       1 1993-09-01 00:00:00+00:00   \n",
+       "248     ripencc      EU   asn          248       1 1993-09-01 00:00:00+00:00   \n",
+       "...         ...     ...   ...          ...     ...                       ...   \n",
+       "719037  ripencc      ZZ  ipv6  2a14:fd00::      24 2024-12-22 00:00:00+00:00   \n",
+       "719038  ripencc      ZZ  ipv6  2a14:fe00::      23 2024-12-22 00:00:00+00:00   \n",
+       "719039  ripencc      ZZ  ipv6       2a15::      16 2024-12-22 00:00:00+00:00   \n",
+       "719040  ripencc      ZZ  ipv6       2a16::      15 2024-12-22 00:00:00+00:00   \n",
+       "719041  ripencc      ZZ  ipv6       2a18::      13 2024-12-22 00:00:00+00:00   \n",
+       "\n",
+       "           status                             opaque_id category  \\\n",
+       "7        assigned  12cf5dd8-0c74-4405-bcf5-0df45f7dde12  e-stats   \n",
+       "28       assigned  822283a9-e9f2-4155-9408-2b30b469547b  e-stats   \n",
+       "137      assigned  79a53d4d-4e5c-4585-b952-2a936cce5e0b  e-stats   \n",
+       "224      assigned  f5d1ffe0-7d97-4d48-8ebf-87de56e72b1c  e-stats   \n",
+       "248      assigned  3903dde7-01a4-47b2-9c35-57c1e9de0c9c  e-stats   \n",
+       "...           ...                                   ...      ...   \n",
+       "719037  available                               ripencc  e-stats   \n",
+       "719038  available                               ripencc  e-stats   \n",
+       "719039  available                               ripencc  e-stats   \n",
+       "719040  available                               ripencc  e-stats   \n",
+       "719041  available                               ripencc  e-stats   \n",
+       "\n",
+       "              resource  \n",
+       "7                    7  \n",
+       "28                  28  \n",
+       "137                137  \n",
+       "224                224  \n",
+       "248                248  \n",
+       "...                ...  \n",
+       "719037  2a14:fd00::/24  \n",
+       "719038  2a14:fe00::/23  \n",
+       "719039       2a15::/16  \n",
+       "719040       2a16::/15  \n",
+       "719041       2a18::/13  \n",
+       "\n",
+       "[252724 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -108,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
